--- a/examples/reindexer_en.ipynb
+++ b/examples/reindexer_en.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_reindexer.vectorstores.reindexer import ReindexerVectorStore\n",
+    "from langchain_reindexer import ReindexerVectorStore\n",
     "from langchain_core.embeddings import FakeEmbeddings\n",
     "from langchain_core.documents import Document"
    ]
