--- a/examples/reindexer_ru.ipynb
+++ b/examples/reindexer_ru.ipynb
@@ -40,9 +40,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_reindexer import ReindexerVectorStore\n",
+    "from langchain_core.documents import Document\n",
     "from langchain_core.embeddings import FakeEmbeddings\n",
-    "from langchain_core.documents import Document"
+    "\n",
+    "from langchain_reindexer import ReindexerVectorStore"
    ]
   },
   {
